SERVER-70233 Fix use-after-move defect in DocumentSourceBackupFile

GitOrigin-RevId: 0183619f90d1b510650596835952972602c1fb8e